// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.ce;

import "ws-commons.proto";

option java_package = "org.sonarqube.ws";
option java_outer_classname = "WsCe";
option optimize_for = SPEED;

// POST api/ce/submit
message SubmitResponse {
  optional string taskId = 1;
  optional string projectId = 2;
}

// GET api/ce/task
message TaskResponse {
  optional Task task = 1;
}

// GET api/ce/activity
message ActivityResponse {
  // paging has been deprecated in 5.5
  optional sonarqube.ws.commons.Paging unusedPaging = 1;
  repeated Task tasks = 2;
}

// GET api/ce/activity_status
message ActivityStatusWsResponse {
  optional int32 pending = 1;
  optional int32 failing = 2;
}

// GET api/ce/project
message ProjectResponse {
  repeated Task queue = 1;
  optional Task current = 2;
}

// GET api/ce/task_types
message TaskTypesWsResponse {
  repeated string taskTypes = 1;
}

message Task {
  optional string organization = 1;
  optional string id = 2;
  optional string type = 3;
  optional string componentId = 4;
  optional string componentKey = 5;
  optional string componentName = 6;
  optional string componentQualifier = 7;
  optional string analysisId = 8;
  optional TaskStatus status = 9;
  optional string submittedAt = 10;
  optional string submitterLogin = 11;
  optional string startedAt = 12;
  optional string executedAt = 13;
  optional bool isLastExecuted = 14;
  optional int64 executionTimeMs = 15;
  optional bool logs = 16;
  optional string errorMessage = 17;
  optional string errorStacktrace = 18;
  optional string scannerContext = 19;
  optional bool hasScannerContext = 20;
}

enum TaskStatus {
  PENDING = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
  CANCELED = 4;
}
